--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -98,13 +98,17 @@
 }
 
 .header__text-subtitle p {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
   color: #fff;
   line-height: 1.5;
   margin: 0;
   margin-bottom: 30px;
+
+  @media (min-width: 400px) {
+    font-size: 24px;
+  }
 
   @media (min-width: 600px) {
     font-size: 30px;
@@ -141,14 +145,19 @@
 .header__avatar {
   position: relative;
   box-shadow: 10px 14px 16px -3px rgba(34, 60, 80, 0.18);
-  height: 320px;
-  width: 320px;
+  height: 280px;
+  width: 280px;
   transition: 1.2s ease-in-out;
   border-radius: 50%;
   z-index: 5;
   padding: 10px;
   background-color: $redCyber;
   margin: 0 auto;
+
+  @media (min-width: 400px) {
+    height: 320px;
+    width: 320px;
+  }
 
   @media (min-width: 600px) {
     height: 430px;
@@ -166,11 +175,17 @@
 
 .header__avatar_html {
   position: absolute;
-  top: -100px;
-  left: -35px;
-  width: 150px;
-  height: 150px;
+  top: -90px;
+  left: -25px;
+  width: 120px;
+  height: 120px;
   transition: 0.5s linear;
+
+  @media (min-width: 400px) {
+    top: -100px;
+    height: 150px;
+    width: 150px;
+  }
 
   @media (min-width: 600px) {
     left: 0px;
@@ -188,11 +203,17 @@
 
 .header__avatar_css {
   position: absolute;
-  top: -100px;
-  right: -35px;
-  width: 150px;
-  height: 150px;
+  top: -90px;
+  right: -25px;
+  width: 120px;
+  height: 120px;
   transition: 0.5s linear;
+
+  @media (min-width: 400px) {
+    top: -100px;
+    height: 150px;
+    width: 150px;
+  }
 
   @media (min-width: 600px) {
     right: 0px;
@@ -210,12 +231,18 @@
 
 .header__avatar_js {
   position: absolute;
-  top: -140px;
+  top: -130px;
   left: 50%;
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   transform: translate(-50%, 0);
   transition: 0.5s linear;
+
+  @media (min-width: 400px) {
+    top: -140px;
+    height: 150px;
+    width: 150px;
+  }
 
   &:hover {
     transform: translate(-50%, -15px);
@@ -239,8 +266,13 @@
 }
 
 .avatar-html__img {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
+
+  @media (min-width: 400px) {
+    height: 150px;
+    width: 150px;
+  }
 
   img {
     border-radius: 0;
@@ -248,8 +280,13 @@
 }
 
 .avatar-css__img {
-  width: 150px;
-  height: 150px;
+  height: 120px;
+  width: 120px;
+
+  @media (min-width: 400px) {
+    width: 150px;
+    height: 150px;
+  }
 
   img {
     border-radius: 0;
@@ -257,8 +294,13 @@
 }
 
 .avatar-js__img {
-  width: 150px;
-  height: 150px;
+  height: 120px;
+  width: 120px;
+
+  @media (min-width: 400px) {
+    width: 150px;
+    height: 150px;
+  }
 
   img {
     border-radius: 0;
@@ -371,11 +413,15 @@
 
 .header__bg-title {
   margin-bottom: 50px;
-  font-size: 40px;
+  font-size: 32px;
   font-family: "Neoneon";
   color: #fff;
   font-weight: 700;
   text-shadow: 0px 3px 42.32px rgba(255, 255, 255, 0.004);
+
+  @media (min-width: 400px) {
+    font-size: 40px;
+  }
 
   @media (min-width: 480px) {
     font-size: 50px;
@@ -395,12 +441,16 @@
   margin: 0;
   margin-bottom: 30px;
   list-style-type: none;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
   color: #fff;
   line-height: 1.2;
   text-shadow: 0px 3px 42.32px rgba(255, 255, 255, 0.004);
+
+  @media (min-width: 400px) {
+    font-size: 24px;
+  }
 
   @media (min-width: 600px) {
     font-size: 34px;
@@ -413,7 +463,10 @@
 
 .header__bg-button {
   display: flex;
-  margin-left: 20px;
+
+  @media (min-width: 400px) {
+    margin-left: 20px;
+  }
 
   @media (min-width: 1170px) {
     margin-left: 0;
@@ -440,11 +493,15 @@
 }
 
 .header__bg-social .fa-2x {
-  font-size: 48px;
+  font-size: 34px;
   text-shadow: 0 0 5px $redCyber, 0 0 10px $redCyber, 0 0 20px $redCyber,
-    0 0 40px $redCyber, 0 0 80px $redCyber, 0 0 90px $redCyber, 0 0 100px $redCyber,
-    0 0 150px $redCyber;
+    0 0 40px $redCyber, 0 0 80px $redCyber, 0 0 90px $redCyber,
+    0 0 100px $redCyber, 0 0 150px $redCyber;
   transition: 0.5s ease-in-out;
+
+  @media (min-width: 400px) {
+    font-size: 48px;
+  }
 
   @media (min-width: 600px) {
     font-size: 64px;
@@ -460,7 +517,7 @@
 }
 
 .header__bg-email {
-  font-size: 28px;
+  font-size: 20px;
   font-family: "L890-Roman-Regular";
   font-weight: 400;
   color: #fff;
@@ -475,6 +532,10 @@
   &:focus,
   &:active {
     color: #ea736d;
+  }
+
+  @media (min-width: 400px) {
+    font-size: 28px;
   }
 
   @media (min-width: 600px) {
@@ -508,15 +569,15 @@
   border-radius: 6px;
   outline: none;
   background: rgba(0, 0, 0, 1);
-  opacity: .6;
-  transition: opacity .3s ease-in 0s, box-shadow .3s ease-in .3s;
+  opacity: 0.6;
+  transition: opacity 0.3s ease-in 0s, box-shadow 0.3s ease-in 0.3s;
 
   &::before {
     position: absolute;
     top: 15px;
     left: 50%;
     transform: translateX(-50%);
-    content: '';
+    content: "";
     width: 4px;
     height: 30px;
     background: #ffffff;
@@ -527,7 +588,7 @@
     bottom: 15px;
     left: 50%;
     transform: translateX(-50%);
-    content: '';
+    content: "";
     width: 4px;
     height: 30px;
     background: #ffffff;
@@ -556,5 +617,6 @@
 
 .header__carousel-btn:hover {
   opacity: 1;
-  box-shadow: 0px 0px 10px $redCyber, 0px 0px 20px $redCyber, 0px 0px 30px $redCyber;
+  box-shadow: 0px 0px 10px $redCyber, 0px 0px 20px $redCyber,
+    0px 0px 30px $redCyber;
 }
