--- a/src/scss/blocks/portfolio.scss
+++ b/src/scss/blocks/portfolio.scss
@@ -54,11 +54,15 @@
   position: relative;
   display: inline-block;
   margin-bottom: 70px;
-  font-size: 40px;
+  font-size: 32px;
   font-family: "Neoneon";
   color: rgb(255, 255, 255);
   font-weight: bold;
   z-index: 5;
+
+  @media (min-width: 400px) {
+    font-size: 40px;
+  }
 
   @media (min-width: 480px) {
     font-size: 50px;
@@ -97,14 +101,20 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  @media (min-width: 1020px) {
+    flex-direction: row;
+  }
 }
 
 .portfolio__card .card {
   margin-bottom: 30px;
-  margin-right: 30px;
-  margin-left: 30px;
-
+  
   @media (min-width: 1020px) {
+    margin-right: 30px;
+    margin-left: 30px;
     margin-left: 0;
     &:nth-child(2n),
     &:last-child {
