--- a/src/scss/blocks/sidebar.scss
+++ b/src/scss/blocks/sidebar.scss
@@ -3,10 +3,10 @@
   top: 200px;
   left: -100%;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 200px);
   z-index: 100;
   background: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
+  overflow: auto;
   transition: left 2s ease-in-out 0s;
 }
 
@@ -18,7 +18,7 @@
   position: relative;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  height: auto;
   background: rgba(73, 73, 73, 0.3);
   background-blend-mode: color-dodge;
 }
@@ -101,9 +101,13 @@
 }
 
 .sidebar__social .fa {
-  font-size: 48px;
+  font-size: 36px;
   color: #fff;
   text-shadow: 0px 0px 10px #e70f0f, 0px 0px 20px #e70f0f, 0px 0px 30px #e70f0f;
+
+  @media (min-width: 400px) {
+    font-size: 48px;
+  }
 }
 
 .sidebar__btn {
