--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -6,7 +6,7 @@
   background-color: $redCyber50;
   border-radius: 40px;
   border: 4px solid $redCyber;
-  font-size: 24px;
+  font-size: 18px;
   font-family: "Neoneon";
   color: #73ebeb;
   font-weight: bold;
@@ -73,6 +73,10 @@
     transition-delay: 0s, 0.5s, 1s, 1s;
   }
 
+  @media (min-width: 400px) {
+    font-size: 24px;
+  }
+
   @media (min-width: 600px) {
     font-size: 34px;
   }
@@ -121,12 +125,17 @@
 
 .card__img-wrap {
   position: relative;
-  height: 250px;
+  height: 200px;
   width: 100%;
   perspective: 800px;
   z-index: 30;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/card/bg/card-bg.jpg') center center /cover no-repeat;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../img/card/bg/card-bg.jpg") center center / cover no-repeat;
   border-radius: 14px 14px 0 0;
+
+  @media (min-width: 400px) {
+    height: 250px;
+  }
 
   @media (min-width: 440px) {
     height: 300px;
@@ -202,8 +211,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 34px;
-  line-height: 34px;
+  font-size: 24px;
+  line-height: 24px;
   letter-spacing: 2px;
   font-family: "Neoneon";
   color: aqua;
@@ -216,6 +225,11 @@
   transition-delay: 0.6s;
   box-shadow: 0 0 10px #6decfd, 0 0 20px #6decfd, 0 0 40px #6decfd,
     0 0 60px #6decfd;
+
+  @media (min-width: 440px) {
+    font-size: 34px;
+    line-height: 34px;
+  }
 }
 
 .card__title {
