--- a/src/scss/mixin/detals.scss
+++ b/src/scss/mixin/detals.scss
@@ -1,12 +1,16 @@
 .detals-title {
   display: inline-block;
   margin-bottom: 30px;
-  font-size: 32px;
+  font-size: 26px;
   font-family: "L890-Roman-Bold";
   color: rgb(255, 255, 255);
   font-weight: bold;
   line-height: 1.2;
   border-bottom: 8px solid $redCyber;
+
+  @media (min-width: 400px) {
+    font-size: 32px;
+  }
 
   @media (min-width: 600px) {
     font-size: 44px;
@@ -34,7 +38,7 @@
 
 .detals-description-item p {
   margin: 0;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
   color: rgb(255, 255, 255);
@@ -52,6 +56,10 @@
     }
   }
 
+  @media (min-width: 400px) {
+    font-size: 24px;
+  }
+
   @media (min-width: 600px) {
     font-size: 28px;
   }
@@ -63,7 +71,7 @@
 
 .detals-description-item a {
   display: inline-block;
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 400;
   font-family: "L890-Roman-Regular";
   color: $yellowcolor;
@@ -77,6 +85,10 @@
 
   &:hover {
     color: $blueCyber;
+  }
+
+  @media (min-width: 400px) {
+    font-size: 28px;
   }
 
   @media (min-width: 1170px) {
