--- a/src/scss/blocks/sidebar.scss
+++ b/src/scss/blocks/sidebar.scss
@@ -18,7 +18,7 @@
   position: relative;
   padding: 20px;
   width: 100%;
-  height: auto;
+  height: 100%;
   background: rgba(73, 73, 73, 0.3);
   background-blend-mode: color-dodge;
 }
