--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -19,37 +19,37 @@ section.portfolio
                 // project cards
                 .portfolio__card-inner.wow.animated.shake
                     .project.pug.js
-                        +card("lemon.html", "18.webp", "18.webp", "Верстка “Lemon”", "Верстка одностраничного сайта.")
+                        +card("lemon.html", "18.jpg", "18.jpg", "Верстка “Lemon”", "Верстка одностраничного сайта.")
                     .project.scss.js
-                        +card("healthy-food.html", "16.webp", "16.webp", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
+                        +card("healthy-food.html", "16.jpg", "16.jpg", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
                     .project.pug.js
-                        +card("travel-blog.html", "08.webp", "08.webp", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
+                        +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
                     .project.scss.js
-                        +card("lookshop.html", "14.webp", "14.webp", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
+                        +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
                     .project.pug.js
-                        +card("LiziLizkaLab.html", "04.webp", "04.webp", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
+                        +card("LiziLizkaLab.html", "04.jpg", "04.jpg", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
                     .project.pug.js
-                        +card("amz-tatoo.html", "15.webp", "15.webp", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
+                        +card("amz-tatoo.html", "15.jpg", "15.jpg", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
                     .project.scss.js
-                        +card("dhl.html", "06.webp", "06.webp", "Верстка “DHL”", "Верстка одностраничного сайта.")
+                        +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
                     .project.pug.js
-                        +card("charger.html", "17.webp", "17.webp", "Верстка “Charger", "Верстка одностраничного сайта.")
+                        +card("charger.html", "17.jpg", "17.jpg", "Верстка “Charger”", "Верстка одностраничного сайта.")
                     .project.scss.js
-                        +card("amazing.html", "13.webp", "13.webp", "Верстка “Amazing”", "Верстка одностраничного сайта.")
+                        +card("amazing.html", "13.jpg", "13.jpg", "Верстка “Amazing”", "Верстка одностраничного сайта.")
                     .project.pug.js
-                        +card("realhome.html", "02.webp", "02.webp", "Верстка “RealHome”", "Верстка одностраничного сайта.")
+                        +card("realhome.html", "02.jpg", "02.jpg", "Верстка “RealHome”", "Верстка одностраничного сайта.")
                     .project.pug.js
-                        +card("muncak.html", "12.webp", "12.webp", "Верстка “Muncak”", "Верстка одностраничного сайта.")
+                        +card("muncak.html", "12.jpg", "12.jpg", "Верстка “Muncak”", "Верстка одностраничного сайта.")
                     .project.less.js
-                        +card("surfing.html", "09.webp", "09.webp", "Верстка “Surfing Website”", "Верстка одностраничного сайта.")
+                        +card("surfing.html", "09.jpg", "09.jpg", "Верстка “Surfing Website”", "Верстка одностраничного сайта.")
                     .project.scss.js
-                        +card("quantum.html", "03.webp", "03.webp", "Магазин “Quantum”", "Верстка одностраничного сайта.")
+                        +card("quantum.html", "03.jpg", "03.jpg", "Магазин “Quantum”", "Верстка одностраничного сайта.")
                     .project.less.js
-                        +card("unit.html", "11.webp", "11.webp", "Верстка “Unit”", "Верстка одностраничного сайта.")
+                        +card("unit.html", "11.jpg", "11.jpg", "Верстка “Unit”", "Верстка одностраничного сайта.")
                     .project.pug.js
-                        +card("comand-web.html", "07.webp", "07.webp", "Верстка “Digital Nomad”", "Верстка многостраничного сайта.")
+                        +card("comand-web.html", "07.jpg", "07.jpg", "Верстка “Digital Nomad”", "Верстка многостраничного сайта.")
                     .project.html
-                        +card("forest-travel.html", "10.webp", "10.webp", "Верстка “Forest Travel”", "Верстка многостраничного сайта.")
+                        +card("forest-travel.html", "10.jpg", "10.jpg", "Верстка “Forest Travel”", "Верстка многостраничного сайта.")
 
 
 
