new bg + burger

--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -23,7 +23,7 @@ section.header
 					h4.avatar__title JS
 					.avatar-js__img
 						img(src="./img/header/js.png", alt="js.png")
-				img(src="./img/header/master.webp", alt="master")
+				img(src="./img/header/master.jpg", alt="master")
 	.big-container
 		.header__bg-img.wow.animated.fadeInUp
 			.header__carousel.owl-carousel.owl-theme
