--- a/src/pug/sections/navigation.pug
+++ b/src/pug/sections/navigation.pug
@@ -1,25 +1,25 @@
 section.navigation#navigation
-    .big-container
-        div(id="nightSun" class="night-sun" data-night data-title="Включить белую тему")
-            i(class="fa fa-3x fa-moon-o" aria-hidden="true")
-        .navigation-wrap
-            h1.navigation__logo.wow.animated.slideInDown
-                +logo("index.html")
-            nav.navigation__link-nav.wow.animated.slideInDown
-                ul
-                    +nav("index.html", "Главная", "Главная")
-                    +nav("portfolio.html", "Работы", "Работы")
-                    +nav("contact.html", "Контакты", "Контакты")
-            .navigation__social.wow.animated.slideInDown
-                a(href="https://vk.com/id65683827" target="_blank" class="social-vk")
-                    i(class="fa fa-vk fa-2x" aria-hidden="true")
-                a(href="https://wa.me/+79253215539" target="_blank" class="social-facebook")
-                    i(class="fa fa-whatsapp fa-2x" aria-hidden="true")
-                a(href="mailto:sasha89253215539@yandex.ru" target="_blank" class="social-email")
-                    i(class="fa fa-envelope fa-2x" aria-hidden="true")
-                a(href="https://telegram.im/@Voojaxx" target="_blank" class="social-telegram")
-                    i(class="fa fa-telegram fa-2x" aria-hidden="true")
-                a(href="https://github.com/AleksandrVorobyov" target="_blank" class="social-github")
-                    i(class="fa fa-github fa-2x" aria-hidden="true")
-            button.navigation__burger#nav-burger-btn(type="button")
-                span
+	.big-container
+		div(id="nightSun", class="night-sun" data-night data-title="Включить белую тему")
+			i(class="fa fa-3x fa-moon-o", aria-hidden="true")
+		.navigation-wrap
+			h1.navigation__logo.wow.animated.slideInDown
+				+logo("index.html")
+			nav.navigation__link-nav.wow.animated.slideInDown
+				ul
+					+nav("index.html", "Главная", "Главная")
+					+nav("portfolio.html", "Работы", "Работы")
+					+nav("contact.html", "Контакты", "Контакты")
+			.navigation__social.wow.animated.slideInDown
+				a(href="https://vk.com/id65683827", target="_blank", class="social-vk")
+					i(class="fa fa-vk fa-2x", aria-hidden="true")
+				a(href="https://wa.me/+79253215539", target="_blank", class="social-facebook")
+					i(class="fa fa-whatsapp fa-2x", aria-hidden="true")
+				a(href="mailto:sasha89253215539@yandex.ru", target="_blank", class="social-email")
+					i(class="fa fa-envelope fa-2x", aria-hidden="true")
+				a(href="https://telegram.im/@Voojaxx", target="_blank", class="social-telegram")
+					i(class="fa fa-telegram fa-2x", aria-hidden="true")
+				a(href="https://github.com/AleksandrVorobyov", target="_blank", class="social-github")
+					i(class="fa fa-github fa-2x", aria-hidden="true")
+			button.navigation__burger#nav-burger-btn(type="button")
+				span
