--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -387,7 +387,7 @@
       #fd6dfc80 80%
     ),
     url("../img/body/00.webp") top left / cover no-repeat;
-  background-blend-mode: darken;
+  background-blend-mode: color;
   overflow: hidden;
   z-index: 20;
 }
