--- a/src/scss/blocks/navigation.scss
+++ b/src/scss/blocks/navigation.scss
@@ -265,48 +265,72 @@
 .navigation__burger {
   position: relative;
   display: block;
-  width: 50px;
-  height: 40px;
-  border: none;
-  background: transparent;
+  width: 70px;
+  height: 60px;
+  padding: 10px;
+  background: $redCyber;
+  border: 3px solid #fff;
   cursor: pointer;
+  overflow: hidden;
+  z-index: 100;
+  border-radius: 3px;
+  outline: none;
 
   &::before {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 10px;
+    left: 10px;
     height: 4px;
-    width: 100%;
+    width: calc(100% - 20px);
     content: "";
     background: $white;
     border-radius: 3px;
+    transition: top 0.4s linear 0s, transform 0.4s linear 0s;
   }
 
   &::after {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 10px;
+    left: 10px;
     height: 4px;
-    width: 100%;
+    width: calc(100% - 20px);
     content: "";
     background: $white;
     border-radius: 3px;
+    transition: bottom 0.4s linear 0s, transform 0.4s linear 0s;
   }
 
   span::before {
     position: absolute;
     top: 50%;
-    left: 0;
+    left: 10px;
     height: 4px;
-    width: 100%;
+    width: calc(100% - 20px);
     content: "";
     transform: translateY(-50%);
     background: $white;
     border-radius: 3px;
+    transition: opacity 0.4s linear 0s;
   }
 
   @media (min-width: 768px) {
     display: none;
+  }
+}
+
+.navigation__burger.navigation__burger--active {
+  &::before {
+    top: auto;
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    bottom: auto;
+    transform: rotate(-45deg);
+  }
+
+  span::before {
+    opacity: 0;
   }
 }
 
