--- a/src/pug/sections/timeline.pug
+++ b/src/pug/sections/timeline.pug
@@ -4,36 +4,36 @@ section.timeline(id="scrolltarget")
             h3.timeline__title.neon.wow.animated.lightSpeedIn К<span>ак</span> я р<span>або</span>таю
             .timeline__column
                 .timeline__column-item.wow.animated.slideInLeft
-                    .timeline__column-item-img
-                        img(src="./img/svg/layers-01.png", alt="layers-01.png")
+                    .timeline__column-item-img 
+                        .timeline-icon.timeline-icon_1
                     .timeline__column-item-text
                         h4.timeline__column-title Оцениваю макет
                         p.timeline__column-subtitle Оцениваю объем работы, сложность,  нюансы. Задаю вопросы.
                         span.timeline__column-desc Время: 2 - 4 часа
                 .timeline__column-item.wow.animated.slideInRight
-                    .timeline__column-item-img
-                        img(src="./img/svg/layers-02.png", alt="layers-01.png")
+                    .timeline__column-item-img 
+                        .timeline-icon.timeline-icon_2
                     .timeline__column-item-text
                         h4.timeline__column-title ТЗ, смета и график работ
                         p.timeline__column-subtitle Согласовываем техническое задание и график работ по проекту. Отмечаю стоимость по этапам работы.
                         span.timeline__column-desc Время: 1 - 2 часа
                 .timeline__column-item.wow.animated.slideInLeft
-                    .timeline__column-item-img
-                        img(src="./img/svg/layers-03.png", alt="layers-01.png")
+                    .timeline__column-item-img 
+                        .timeline-icon.timeline-icon_3
                     .timeline__column-item-text
                         h4.timeline__column-title Вы держите руку на пульсе
                         p.timeline__column-subtitle Выдаю клиенту доступ к GitHub репозиторию и доске Trello. Вы в любое время можете видеть актуальное состояние проекта и задач.
                         span.timeline__column-desc Время: 2 часа
                 .timeline__column-item.wow.animated.slideInRight
-                    .timeline__column-item-img
-                        img(src="./img/svg/layers-04.png", alt="layers-01.png")
+                    .timeline__column-item-img 
+                        .timeline-icon.timeline-icon_4
                     .timeline__column-item-text
                         h4.timeline__column-title Выполняю каждый этап
                         p.timeline__column-subtitle Поочередно выполняю каждый этап работы. Передаю результаты. Заказчик производит поэтапную оплату.
                         span.timeline__column-desc Время: 2 - 4 часа
                 .timeline__column-item.wow.animated.slideInLeft
-                    .timeline__column-item-img
-                        img(src="./img/svg/layers-05.png", alt="layers-01.png")
+                    .timeline__column-item-img 
+                        .timeline-icon.timeline-icon_5
                     .timeline__column-item-text
                         h4.timeline__column-title Финальное ревью проекта
                         p.timeline__column-subtitle Проект готов. Финальное ревью и полировка до идеального состояния. Передаю файлы проекта заказчику.
