--- a/src/scss/blocks/timeline.scss
+++ b/src/scss/blocks/timeline.scss
@@ -287,18 +287,17 @@
   justify-content: center;
   align-items: center;
   border-radius: 28px;
-  background-color: #ffffff;
+  background: linear-gradient(#ffffff, #ffffff);
   box-shadow: 0px 3px 35px 0px rgba(0, 112, 187, 0.35);
-  width: 100px;
-  height: 100px;
+  width: 74px;
+  height: 74px;
   z-index: 7;
   transform: translate(-50%);
 
   @media (min-width: 1170px) {
     top: -95px;
-    width: 74px;
-    height: 74px;
   }
+
   @media (min-width: 1260px) {
     top: 0;
   }
@@ -310,4 +309,40 @@
       height: auto;
     }
   }
+}
+
+.timeline-icon {
+  display: inline-block;
+  background: url("../img/sprite/timeline.png");
+  background-repeat: no-repeat;
+}
+
+.timeline-icon_1 {
+  background-position: -15px -15px;
+  width: 40px;
+  height: 40px;
+}
+
+.timeline-icon_2 {
+  background-position: -85px -15px;
+  width: 39px;
+  height: 40px;
+}
+
+.timeline-icon_3 {
+  background-position: -154px -15px;
+  width: 36px;
+  height: 40px;
+}
+
+.timeline-icon_4 {
+  background-position: -220px -15px;
+  width: 42px;
+  height: 35px;
+}
+
+.timeline-icon_5 {
+  background-position: -292px -15px;
+  width: 40px;
+  height: 35px;
 }
