new project sound shop

--- a/src/pug/portfolio/charger.pug
+++ b/src/pug/portfolio/charger.pug
@@ -23,7 +23,7 @@ section.card-post
                     .owl-carousel-item
                         img(src="./img/portfolio/charger/01.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("dhl.html", "realhome.html")
+            +pagination-card("sound-shop.html", "dhl.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
