--- a/src/pug/portfolio/dhl.pug
+++ b/src/pug/portfolio/dhl.pug
@@ -24,7 +24,7 @@ section.card-post
                     .owl-carousel-item
                         img(src="./img/portfolio/dhl/03.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("amz-tatoo.html", "charger.html")
+            +pagination-card("charger.html", "realhome.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
