--- a/src/pug/portfolio/realhome.pug
+++ b/src/pug/portfolio/realhome.pug
@@ -25,7 +25,7 @@ section.card-post
                         img(src="./img/portfolio/realhome/03.jpg", alt="01.jpg")
 
         .card-post__pagination
-            +pagination-card("charger.html", "muncak.html")
+            +pagination-card("dhl.html", "muncak.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
