--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -31,6 +31,8 @@ section.portfolio
                     .project.pug.js
                         +card("amz-tatoo.html", "15.jpg", "15.jpg", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
                     .project.scss.js
+                        +card("sound-shop.html", "19.jpg", "19.jpg", "Верстка “Sound Shop”", "Верстка одностраничного сайта.")
+                    .project.scss.js
                         +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
                     .project.pug.js
                         +card("charger.html", "17.jpg", "17.jpg", "Верстка “Charger”", "Верстка одностраничного сайта.")
