new project takeme

--- a/src/pug/portfolio/lemon.pug
+++ b/src/pug/portfolio/lemon.pug
@@ -21,7 +21,7 @@ section.card-post
                     .owl-carousel-item
                         img(src="./img/portfolio/lemon/01.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("forest-travel.html", "healthy-food.html")
+            +pagination-card("takeme.html", "healthy-food.html")
     .full-page
         .container.full-page-wrapper
             .full-page-wrap
