--- a/src/pug/sections/portfolio.pug
+++ b/src/pug/sections/portfolio.pug
@@ -3,6 +3,7 @@ section(class='portfolio' id='portfolio')
         .portfolio-wrap
             h3.portfolio__title.neon.wow.animated.lightSpeedIn По<span>рт</span>фо<span>ли</span>о
             nav.portfolio__card.wow.animated.shake
+                    +card("takeme.html", "20.jpg", "20.jpg", "Верстка “TakeMe”", "Верстка одностраничного сайта.")
                     +card("lemon.html", "18.jpg", "18.jpg", "Верстка “Lemon”", "Верстка одностраничного сайта.")
                     +card("healthy-food.html", "16.jpg", "16.jpg", "Верстка “Healthy Food”", "Верстка одностраничного сайта.")
                     +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
@@ -11,7 +12,6 @@ section(class='portfolio' id='portfolio')
                     +card("amz-tatoo.html", "15.jpg", "15.jpg", "Магазин “Amz-Tatoo”", "Верстка одностраничного сайта.")
                     +card("sound-shop.html", "19.jpg", "19.jpg", "Верстка “Sound Shop”", "Верстка одностраничного сайта.")
                     +card("charger.html", "17.jpg", "17.jpg", "Верстка “Charger”", "Верстка одностраничного сайта.")
-                    +card("muncak.html", "12.jpg", "12.jpg", "Верстка “Muncak”", "Верстка одностраничного сайта.")
         .portfolio__nav-bottom
             .portfolio__color-circle.wow.animated.fadeInUp
                 div(class="color-item color-yellow" data-color='linear-gradient(0deg, rgba(248,255,128,1) 0%, rgba(252,223,89,1) 100%)')
