--- a/src/scss/blocks/night.scss
+++ b/src/scss/blocks/night.scss
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: center;
   z-index: 15;
-  height: 100px;
-  width: 100px;
+  height: 70px;
+  width: 70px;
   right: 60px;
   top: 150px;
   cursor: pointer;
@@ -29,10 +29,31 @@
     transition: 0.5s ease-in-out;
   }
 
+  @media (min-width: 480px) {
+    height: 100px;
+    width: 100px;
+  }
+
   @media (min-width: 1170px) {
     right: 150px;
     height: 50px;
     width: 50px;
+  }
+}
+
+.night-sun i {
+  font-size: 4em;
+}
+
+@media (min-width: 480px) {
+  .night-sun i {
+    font-size: 6em;
+  }
+}
+
+@media (min-width: 1120px) {
+  .night-sun i {
+    font-size: 3em;
   }
 }
 
@@ -510,14 +531,6 @@
   color: #fff;
 }
 
-.fa-3x {
-  font-size: 6em !important;
-
-  @media (min-width: 1170px) {
-    font-size: 3em !important;
-  }
-}
-
 .night .timeline__column-item-text {
   background: #7e90b9;
 
@@ -572,10 +585,16 @@
   }
 
   .sidebar__links-item {
-    box-shadow: 0px 0px 10px rgb(251, 220, 77), 0px 0px 20px rgb(251, 220, 77), 0px 0px 40px rgb(251, 220, 77);
+    box-shadow: 0px 0px 10px rgb(251, 220, 77), 0px 0px 20px rgb(251, 220, 77),
+      0px 0px 40px rgb(251, 220, 77);
   }
 
   .sidebar__social .fa {
-    text-shadow: 0px 0px 10px rgb(251, 220, 77), 0px 0px 20px rgb(251, 220, 77), 0px 0px 40px rgb(251, 220, 77);
+    text-shadow: 0px 0px 10px rgb(251, 220, 77), 0px 0px 20px rgb(251, 220, 77),
+      0px 0px 40px rgb(251, 220, 77);
   }
+}
+
+.night .navigation__burger {
+  background: rgb(126, 144, 185);
 }
