fix bugs / delete full-page projects / new full-page for the header carousel

--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -65,3 +65,6 @@ section.header
 					a(href="https://github.com/AleksandrVorobyov", target="_blank", class="social-github")
 						i(class="fa fa-github fa-2x", aria-hidden="true")
 				a(href="mailto:sasha89253215539@yandex.ru").header__bg-email sasha89253215539@yandex.ru
+.full-page 
+	.full-page-item 
+		img
