--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -107,7 +107,7 @@
   text-align: left;
   text-shadow: 0 0 5px rgb(26, 26, 26);
 
-  @media (min-width: 400px) {
+  @media (min-width: 480px) {
     font-size: 24px;
   }
 
@@ -173,10 +173,6 @@
 
 .rounded .rounded-row:hover {
   background: #eceae8;
-}
-
-.rounded .rounded-row:hover:before {
-  transform: rotate(360deg);
 }
 
 .rounded .rounded-row:before {
@@ -271,11 +267,10 @@
 
 .contact__info-social {
   justify-content: center;
-  margin-bottom: 0px !important;
+  margin-bottom: 30px;
   z-index: 5;
 
   @media (min-width: 1170px) {
-    margin-bottom: 30px !important;
     float: right;
   }
 }
@@ -287,7 +282,6 @@
 .contact__form {
   display: flex;
   flex-direction: column;
-  margin: 20px;
   padding: 15px;
   max-width: 550px;
   background-color: rgb(255, 255, 255);
@@ -306,6 +300,9 @@
   }
 
   @media (min-width: 768px) {
+    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
     min-width: 500px;
   }
 }
