--- a/src/scss/blocks/portfolio.scss
+++ b/src/scss/blocks/portfolio.scss
@@ -1,7 +1,11 @@
 .portfolio {
   position: relative;
-  padding: 120px 15px;
+  padding: 80px 15px;
   overflow-x: hidden;
+
+  @media (min-width: 600px) {
+    padding: 120px 15px;
+  }
 
   &::before {
     content: "";
@@ -111,7 +115,7 @@
 
 .portfolio__card .card {
   margin-bottom: 30px;
-  
+
   @media (min-width: 1020px) {
     margin-right: 30px;
     margin-left: 30px;
