--- a/src/scss/blocks/sidebar.scss
+++ b/src/scss/blocks/sidebar.scss
@@ -3,7 +3,7 @@
   top: 200px;
   left: -100%;
   width: 100%;
-  height: calc(100% - 150px);
+  height: calc(100% - 200px);
   z-index: 100;
   background: rgba(0, 0, 0, 0.5);
   overflow: auto;
@@ -18,7 +18,7 @@
   position: relative;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(73, 73, 73, 0.3);
   background-blend-mode: color-dodge;
 }
