--- a/src/pug/portfolio/charger.pug
+++ b/src/pug/portfolio/charger.pug
@@ -1,6 +1,6 @@
 section.card-post
     .container.card-post-wrap
-        .card-post__nav
+        .card-post__nav.wow.animated.fadeInUp
             h2.card-post__nav-desc Верстка интернет магазина
             h3.card-post__nav-title “Charger”
             .card-post__nav-meta 
@@ -9,12 +9,12 @@ section.card-post
                 span.meta-js JS
                 span.meta-jquery jQuery
         .card-post__content
-            .card-post__content-desc
+            .card-post__content-desc.wow.animated.bounceInLeft
                 +link-project("https://aleksandrvorobyov.github.io/charger/", "https://github.com/AleksandrVorobyov/charger")
                 +about-project()
                     p Верстка одностроничного веб-сайта. Это реальный проект и доступен для просмотра по ссылке выше. Сделан с использованием фреймворка Bootstrap, библиотеки animate и Jquery. В верстке используются файлы HTML, Css, js, Sсss , Pug и конечно Gulp. На сайте можно увидеть такие компоненты как модальные окна, адаптивное меню, а также форма отправки данных на почту с помощью ajax. Сайт полностью адаптирован под любое разрешение экрана. Верстка прошла проверку на валидность.
                 +detals("Частное лицо", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/charger/", "Адаптивная верстка, HTML5, CSS3, JavaScript, jQuery.", "Мобильная навигация, ajax форма, валидация форм")
-            .card-post__content-carousel
+            .card-post__content-carousel.wow.animated.bounceInRight
                 .carousel-project.owl-carousel
                     .owl-carousel-item
                         img(src="./img/portfolio/charger/03.jpg", alt="03.jpg")
@@ -22,5 +22,5 @@ section.card-post
                         img(src="./img/portfolio/charger/02.jpg", alt="02.jpg")
                     .owl-carousel-item
                         img(src="./img/portfolio/charger/01.jpg", alt="01.jpg")
-        .card-post__pagination
+        .card-post__pagination.wow.animated.fadeInUp
             +pagination-card("sound-shop.html", "dhl.html")
