--- a/src/pug/portfolio/comand-web.pug
+++ b/src/pug/portfolio/comand-web.pug
@@ -1,6 +1,6 @@
 section.card-post
     .container.card-post-wrap
-        .card-post__nav
+        .card-post__nav.wow.animated.fadeInUp
             h2.card-post__nav-desc Верстка интернет магазина
             h3.card-post__nav-title “Digital Nomad”
             .card-post__nav-meta 
@@ -10,12 +10,12 @@ section.card-post
                 span.meta-bootstrap Bootstrap
                 span.meta-jquery jQuery
         .card-post__content
-            .card-post__content-desc
+            .card-post__content-desc.wow.animated.bounceInLeft
                 +link-project("https://aleksandrvorobyov.github.io/comand-work/main.html", "https://github.com/AleksandrVorobyov/comand-work")
                 +about-project()
                     p Верстка многостроничного веб-сайта. Это учебный(Командный) проект и доступен для просмотра по ссылке выше. Сделан с использованием фреймворка Bootstrap, библиотеки animate и Jquery. В верстке используются файлы HTML, Css, js, Sсss. На сайте можно увидеть такие компоненты как табы, модальные окна, адаптивное меню, а также форма отправки данных на почту с помощью ajax. Сайт полностью адаптирован под любое разрешение экрана. Верстка прошла проверку на валидность.
                 +detals("Учебный проект", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/comand-work/main.html", "Адаптивная верстка, HTML5, CSS3, Bootstrap grid, JavaScript, jQuery.", "Мобильная навигация, мега-меню, карусель OwlCarousel, ajax корзина, предпросмотре товара, календарь, datepicker, валидация форм")
-            .card-post__content-carousel
+            .card-post__content-carousel.wow.animated.bounceInRight
                 .carousel-project.owl-carousel
                     .owl-carousel-item
                         img(src="./img/portfolio/digital-nomad/01.jpg", alt="01.jpg")
@@ -25,5 +25,5 @@ section.card-post
                         img(src="./img/portfolio/digital-nomad/03.jpg", alt="01.jpg")
                     .owl-carousel-item
                         img(src="./img/portfolio/digital-nomad/04.jpg", alt="01.jpg")
-        .card-post__pagination
+        .card-post__pagination.wow.animated.fadeInUp
             +pagination-card("unit.html", "forest-travel.html")
