--- a/src/pug/portfolio/quantum.pug
+++ b/src/pug/portfolio/quantum.pug
@@ -1,6 +1,6 @@
 section.card-post
     .container.card-post-wrap
-        .card-post__nav
+        .card-post__nav.wow.animated.fadeInUp
             h2.card-post__nav-desc Верстка интернет магазина
             h3.card-post__nav-title “Quantum”
             .card-post__nav-meta 
@@ -10,17 +10,17 @@ section.card-post
                 span.meta-bootstrap Bootstrap
                 span.meta-jquery jQuery
         .card-post__content
-            .card-post__content-desc
+            .card-post__content-desc.wow.animated.bounceInLeft
                 +link-project("https://aleksandrvorobyov.github.io/Quantum/", "https://github.com/AleksandrVorobyov/Quantum")
                 +about-project()
                     p Верстка одностроничного веб-сайта. Это учебный проект и доступен для просмотра по ссылке выше. Сделан с использованием фреймворка Bootstrap, библиотеки animate и Jquery. В верстке используются файлы HTML, Css, js, Sсss. На сайте можно увидеть такие компоненты как табы, модальные окна, адаптивное меню. Сайт полностью адаптирован под любое разрешение экрана. Верстка прошла проверку на валидность.
                 +detals("Учебный проект", "Учебный проект", "Ссылка на сайт", "https://aleksandrvorobyov.github.io/Quantum/", "Адаптивная верстка, HTML5, CSS3, Bootstrap grid, JavaScript, jQuery.", "Мобильная навигация, мега-меню, карусель OwlCarousel, ajax корзина, предпросмотре товара, календарь, datepicker, валидация форм, маска ввода номера телефона, лайтбоксы, сортировка товаров.")
-            .card-post__content-carousel
+            .card-post__content-carousel.wow.animated.bounceInRight
                 .carousel-project.owl-carousel
                     .owl-carousel-item
                         img(src="./img/portfolio/quantum/01.jpg", alt="01.jpg")
                     .owl-carousel-item
                         img(src="./img/portfolio/quantum/02.jpg", alt="01.jpg")
-        .card-post__pagination
+        .card-post__pagination.wow.animated.fadeInUp
             +pagination-card("surfing.html", "unit.html")
 
