--- a/src/scss/blocks/full-page.scss
+++ b/src/scss/blocks/full-page.scss
@@ -24,7 +24,7 @@
   width: 100%;
   height: 100%;
   padding: 10px;
-  cursor: pointer;
+  cursor: zoom-out;
 
   @media (min-width: 600px) {
     padding: 50px;
