--- a/src/scss/blocks/night.scss
+++ b/src/scss/blocks/night.scss
@@ -585,16 +585,26 @@
   }
 
   .sidebar__links-item {
-    box-shadow: 0px 0px 10px rgb(251, 220, 77), 0px 0px 20px rgb(251, 220, 77),
-      0px 0px 40px rgb(251, 220, 77);
+    box-shadow: 0px 0px 10px $yellowcolor, 0px 0px 20px $yellowcolor,
+      0px 0px 40px $yellowcolor;
   }
 
   .sidebar__social .fa {
-    text-shadow: 0px 0px 10px rgb(251, 220, 77), 0px 0px 20px rgb(251, 220, 77),
-      0px 0px 40px rgb(251, 220, 77);
+    text-shadow: 0px 0px 10px $yellowcolor, 0px 0px 20px $yellowcolor,
+      0px 0px 40px $yellowcolor;
   }
 }
 
 .night .navigation__burger {
   background: rgb(126, 144, 185);
+}
+
+.night .page__link {
+  &::after {
+    border-bottom: 40px solid $yellowcolor;
+  }
+
+  a {
+    font-family: L890-Roman-Bold;
+  }
 }
