--- a/src/pug/sections/sidebar.pug
+++ b/src/pug/sections/sidebar.pug
@@ -2,7 +2,7 @@ aside.sidebar#sidebar
     .sidebar-wrap
         h2.sidebar__title Меню
         .sidebar-wrap-bg
-            img(src="./img/sidebar/sidebar-bg.jpg", alt="sidebar-bg")
+            img(src="./img/sidebar/sidebar-bg-01.jpg", alt="sidebar-bg")
         .sidebar__links
             ul.sidebar__links-col
                 li.sidebar__links-item 
