--- a/src/scss/blocks/sidebar.scss
+++ b/src/scss/blocks/sidebar.scss
@@ -16,7 +16,7 @@
 
 .sidebar-wrap {
   position: relative;
-  padding: 20px;
+  padding: 60px 20px;
   width: 100%;
   height: 100vh;
   background: rgba(73, 73, 73, 0.3);
@@ -37,7 +37,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: left;
+    object-position: center;
   }
 }
 
